[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "abarms"
version = "1.1.1"
authors = [{ name = "Jan Malakhovski", email = "oxij@oxij.org" }]
description = "A handy Swiss-army-knife-like utility for manipulating Android Backup files (`*.ab`, `*.adb`) produced by `adb backup`, `bmgr`, and similar tools"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Operating System :: POSIX",
    "Environment :: Console",
]
keywords = [
    "android", "android backup",
    "adb", "ab",
    "adb backup",
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "cryptography",
]
requires-python = ">=3.7"
[project.urls]
"Homepage" = "https://oxij.org/software/abarms/"
"GitHub" = "https://github.com/Own-Data-Privateer/abarms"
"Support Development" = "https://oxij.org/#support"
[project.scripts]
abarms = "abarms.__main__:main"
