[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "hoardy-adb"
version = "1.1.3"
authors = [{ name = "Jan Malakhovski", email = "oxij@oxij.org" }]
description = "List contens of, unpack, and convert Android Backup files to TAR files and back, decrypt, encrypt, split them into by-app pieces, etc. Android Backup files are `backup.ab`, `*.ab`, `*.adb`, and similarly named files produced by `adb backup`, `bmgr`, and similar tools."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Operating System :: POSIX",
    "Environment :: Console",
]
keywords = [
    "android", "backup",
    "android backup",
    "adb", "ab",
    "adb backup",
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "cryptography",
]
requires-python = ">=3.7"
[project.urls]
"Homepage" = "https://oxij.org/software/hoardy-adb/"
"GitHub" = "https://github.com/Own-Data-Privateer/hoardy-adb"
"Support Development" = "https://oxij.org/#support"
[project.scripts]
hoardy-adb = "hoardy_adb.__main__:main"
abarms = "hoardy_adb.__main__:main"
